fixed table align

--- a/src/pages/Swap/components/StakeHistoryTable.less
+++ b/src/pages/Swap/components/StakeHistoryTable.less
@@ -10,6 +10,13 @@
 .tableStyle {
   width: 100%;
 }
+.tableData {
+  text-align: right;
+}
+.tableDataFirstColumn {
+  text-align: left;
+  align-items: center;
+}
 
 @media (max-width: 768px) {
   .tableStyle {
@@ -32,7 +39,7 @@
       background:  transparent !important;
     }
     .ant-table-thead > tr > th:not(.leftAlignTableHeader){
-      text-align: left !important;
+      text-align: right;
       background:  transparent !important;
     }
     .ant-table-footer{
